src/App.scss
$enable-gradients: true;
#root {
  min-height: 100vh;
}

@layer base {
  html,
  body {
    margin: 0;
    background: linear-gradient(125deg, #02073d, #1a023d);
    background-size: 200% 200%;
    overflow-x: hidden;
    opacity: 0.95;
    font-family: "Exo 2", sans-serif !important;
    scroll-behavior: smooth;
  }

  p {
    margin: 0;
    color: #fff;
  }

  body::after {
    content: "";
    position: fixed;
    inset: 0;

    background-image: url("/noise_overlay.png");
    background-repeat: repeat;

    opacity: 0.07;

    pointer-events: none;
    mix-blend-mode: soft-light;
    z-index: 999999;
    animation: noiseMove 20s ease infinite;
  }

  body::before {
    content: "";
    position: fixed;
    inset: 0;
    pointer-events: none;

    background: radial-gradient(
      circle at 50% 50%,
      rgba(0, 0, 0, 0.15),
      rgba(255, 255, 255, 0.1)
    );
  }
}

@layer components {
  .highlight {
    color: white;
    position: relative;
    text-shadow: 0 0 4px rgba(168, 85, 247, 0.95);
  }

  .app-btn {
    padding: 0.5rem;
    text-align: center;
    cursor: pointer;
    font-size: 0.875rem;
    transition:
      transform 350ms ease-in-out,
      background-color 350ms ease-in-out,
      border-radius 350ms ease-in-out;

    @media (min-width: 1024px) {
      font-size: 1rem;
    }

    &:hover {
      transform: scale(1.15);
      border-radius: 0.375rem;
      background-color: rgb(169, 85, 247);
    }

    &:active {
      transform: scale(0.95);
    }
  }

  .pulse-button {
    animation: buttonPulseGlow 2.5s ease-in-out infinite;

    &:hover {
      animation: none;
      background-color: rgb(168, 85, 247);
      transform: scale(1.15);
    }
  }

  .card {
    display: flex;
    flex-direction: column;
    height: fit-content;
    border-radius: 1rem;
    position: relative;

    backdrop-filter: blur(24px) saturate(150%);

    background: linear-gradient(
      135deg,
      rgba(255, 255, 255, 0.1),
      rgba(255, 255, 255, 0.05),
      rgba(99, 102, 241, 0.08)
    );

    border: 1px solid rgba(147, 197, 253, 0.55);

    box-shadow:
      0 12px 45px rgba(0, 0, 0, 0.4),
      inset -1px 1px 0 rgba(147, 197, 253, 0.9);

    &:before {
      content: "";
      position: absolute;
      inset: 0;
      border-radius: 1rem;

      background: linear-gradient(
        135deg,
        rgba(147, 197, 253, 0.2),
        rgba(255, 255, 255, 0.1),
        rgba(99, 102, 241, 0.2)
      );

      opacity: 0.6;
      pointer-events: none;
      z-index: -1;
    }

    &:after {
      content: "";
      position: absolute;
      inset: 0;
      border-radius: 1rem;

      background: repeating-radial-gradient(
        circle at 0 0,
        rgba(255, 255, 255, 0.03) 0px,
        transparent 1px,
        transparent 2px
      );

      opacity: 0.2;
      pointer-events: none;
      z-index: -1;
    }
  }
}

